feature: PlaceFinder v:0.2 user filters context